--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
     "@babel/runtime": "^7.0.0",
     "react": "16.5.0",
     "react-native": "^0.57.1",
+    "react-native-color-picker": "^0.4.0",
     "react-native-progress": "^3.5.0",
+    "react-native-router-flux": "^4.0.6",
     "react-native-speedometer-chart": "^0.6.4"
   },
   "devDependencies": {
